style: add background images and work on layout issues

--- a/waveandleaf/static/css/style.css
+++ b/waveandleaf/static/css/style.css
@@ -6,13 +6,37 @@
     --pale-green: #E2F4C5;
 }
 
+/* default body class styling */
+.default-body-class {
+    
+    background-image: url('../images/pale-green.jpg'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+/* specific background for deep-blue-background class */
+.deep-blue-background {
+    background-image: url('../images/deep-blue.jpg'); 
+    background-size: inherit;
+    background-repeat: no-repeat;
+}
+.light-green-background {
+    background-image: url('../images/light-green.jpg'); 
+    background-size: inherit;
+    background-repeat: no-repeat;
+}
+.sea-green-background {
+    background-image: url('../images/sea-green.jpg'); 
+    background-size: inherit;
+    background-repeat: no-repeat;
+}
 /* home */
 .home-page {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 120px); /* Adjust this value based on the actual height of your header/footer */
-    overflow: auto; /* Allows internal scrolling if needed */
+    height: calc(100vh - 120px); 
+    overflow: auto;
 }
 
 .home-page .container {
@@ -71,7 +95,7 @@ a {
 /* navigation */
 
 .navbar {
-    background-color: trans;
+    background-color: rgba(255, 255, 255, 0.8)!important;
 }
 
 .navbar-brand img {
@@ -140,4 +164,16 @@ a {
     .select2-container {
         width: 100% !important; 
     }
+}
+
+/* footer */
+footer{
+    background-color: rgba(255, 255, 255, 0.8)!important;
+}
+
+/* upload recipe */
+.recipe-form-wrapper{
+    background-color: rgba(255, 255, 255, 0.8)!important;
+    margin-bottom: 100px;
+    margin-top:50px;
 }
